--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body class="light">
          <nav class="navbar navbar-light fade-main navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="https://aspectos.github.io">Aspect OS</a>
+                <a class="navbar-brand" href="https://aspectos.github.io/experimental.aspectos.github.io/">Aspect OS Experimental</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link" href="https://aspectos.github.io">Home</a>
+                        <a class="nav-link" href="https://aspectos.github.io/experimental.aspectos.github.io/">Home</a>
                         <a class="nav-link" href="../about">About</a>
                         <a class="nav-link" href="../downloads">Download</a>
                     </div>
@@ -69,7 +69,7 @@ Welcome to our official website. After months of deciding on designs, we have fi
                         </p>
                     </div>
                     <div class="col-xxl-6">
-                        <img src="images/PixelBookGo.png" alt="Computor" class="img-fluid">
+                        <img src="images/PixelBookGo.png" alt="Computer" class="img-fluid">
                     </div>
                 </div>
             </section>
