--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Our CSS-->
     <link rel="stylesheet" href="main.css">
 
-    <title>Aspect OS - Home</title>
+    <title>AspectOS Experimental Version</title>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/AspectOS/aspectos.github.io/main/images/AspectOS%20Logo.png">
    
 </head>
