--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Welcome to our official website. After months of deciding on designs, we have fi
                         </p>
                     </div>
                     <div class="col-xxl-6">
-                        <img src="images/PixelBookGo.png" alt="Computer" class="img-fluid">
+                        <img src="images/PixelBookGo (2).png" alt="Computer" class="img-fluid">
                     </div>
                 </div>
             </section>
