--- a/about/index.html
+++ b/about/index.html
@@ -32,8 +32,8 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link" href="https://aspectos.github.io/experimental.aspectos.github.io/">Home</a>
-                        <a class="nav-link" href="../about">About</a>
-                        <a class="nav-link" href="../downloads">Download</a>
+                        <a class="nav-link" href="https://aspectos.github.io/experimental.aspectos.github.io//about">About</a>
+                        <a class="nav-link" href="https://aspectos.github.io/experimental.aspectos.github.io//downloads">Download</a>
                     </div>
                 </div>
             </div>
