--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
             <div class="card">
                  <div class="card-body">We Support Ukraine. <a href="https://github.com/AspectOS/AspectOS/discussions/13">Learn more.</a> 🇺🇦</div>
                 </div> <br>
-                <h1 class="display-2">Aspect OS Home</h1>
                 <br>
-                <h2>
-                The Next Generation
+                <h1 class="display-1">
+The Next Generation
                 </h2>
               
                 <p>
