--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 
     <!--Our CSS-->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="dark-mode.css">
 
     <title>AspectOS Experimental Version</title>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/AspectOS/aspectos.github.io/main/images/AspectOS%20Logo.png">
