--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
    
 </head>
     <body class="light">
+        <div class="center-navbar">
          <nav class="navbar navbar-light fade-main navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="https://aspectos.github.io/experimental.aspectos.github.io/">Aspect OS Experimental</a>
@@ -38,7 +39,7 @@
                 </div>
             </div>
         </nav>
-
+        </div>
         <div class="container-md">
             <section>
             <div class="card">
