--- a/downloads/index.html
+++ b/downloads/index.html
@@ -16,7 +16,7 @@
     <!--Our CSS-->
     <link rel="stylesheet" href="../main.css">
     
-    <link rel="icon" type="image/x-icon" href="images/images (1).png">
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/AspectOS/aspectos.github.io/main/images/AspectOS%20Logo.png">
 
     <title>AspectOS Experimental Version - Download</title>
 </head>
